# csl

./: app.py  mediaUploader.py
db/: database.py
src/: app.py  config.py  mfaSender.py  pyproject.toml
src/apex_csl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/db/: database.py
src/static/css/: chat.css  form.css  login.css  register.css  style.css  tables.css
src/static/js/: main.js
src/static/sql/: db.mysql
src/templates/: home.html  index.html
src/templates/Content/: faq.html  statistics.html
src/templates/admins/: editAdmin.html  editCompany.html  editDisability.html  myProfile.html  viewAdmins.html  viewApplicants.html  viewDisabilities.html
src/templates/applicants/: detailsApplicant.html  detailsCompany.html  editApplicant.html  viewCompanies.html
src/templates/chat/: chat.html  messages_partial.html  newChat.html  sendMessage.html  viewChat.html
src/templates/companies/: createVacancy.html  detailsCompany.html  detailsVacant.html  editCompany.html  editVacant.html  viewAplicantsCompanies.html  viewApplicantsCompanies.html  viewVacancies.html  viewVideos.html
src/templates/users/: adminProfile.html  login.html  recovery.html  recoveryForm.html  register.html  verify_otp.html
static/css/: login.css  style.css  table.css
static/js/: formView.js
templates/: datailscompany.html  home.html  index.html  viewCompanies.html
templates/users/: editdetailscompany.html  login.html  register.html
