[project]
name = "apex_csl"
version = "0.2.7"
description = """A Python package for the Apex: "Camino sin Límites" project."""
authors = [
    { name = "Daniel Tenorio", email = "danyjr@outlook.es" },
    { name = "Mayrin Reyes", email = "mayrinreyes1707@gmail.com" }
]

requires-python = ">=3.10"

dependencies = [
    "flask",
    "pillow", 
    "werkzeug",
    "fpdf",
    "flask-wtf",
    "flask-login",
    "datetime",
    "pymysql",
    "flask_session",
    "redis",
    "pyotp"
]

[tool.setuptools.packages.find]
include = ["db*", "static*", "templates*"] 


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
